--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ jobs:
       script: ./gradlew build
 
 before_deploy:
-  - 'export BODY=$(cat version.json | sed -nE "s/\\s*\"$(git tag --sort=-taggerdate | head -1 | cut -b 2-)\":\\s*\"(.*)\",?/\1/p" | sed "s/\\\\n/\\n/g")'
+  - 'export BODY=$(cat version.json | sed -nE "s/\\s*\"$(git tag --sort=-taggerdate | head -1 | cut -b 2-)\":\\s*\"(.*)\"\\s*,?\\s*/\1/p" | sed "s/\\\\n/\\n/g")'
 
 deploy:
   provider: releases
