Content rewrite, 1.12.2 support, use new ForgeGradle and a CI setup
added:
  - A subspatial key item, it's cool
changed:
  - Completely changed how the subpocket is obtained and opened, read updated mod description for details
  - A new versioning scheme is used
fixed:
  - Now supports up to 16 777 215 item types (theoretical maximum)

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,10 @@
 
 #gradle
-.gradle
-build
-run
+/.gradle
+/build
 
 # intellij
-.idea
-out # i've configured gradle to inherit output dirs but to be safe
-*.iml
-*.iws
-*.ipr
+/.idea
 
 # JVM error logs
 hs_err_pid*.log
