--- a/src/main/resources/subpocket_at.cfg
+++ b/src/main/resources/subpocket_at.cfg
@@ -5,3 +5,5 @@ public net.minecraft.client.renderer.GlStateManager field_179157_e # blendState
 public net.minecraft.client.renderer.GlStateManager$BlendState
 public net.minecraft.client.renderer.GlStateManager$BooleanState
 public net.minecraft.client.renderer.GlStateManager$BooleanState field_179201_b # currentState
+
+public net.minecraft.entity.item.EntityItem field_70292_b # age
