Update to 1.13.2, some code overhaul and refactoring
added:
  - Now you can disable subspatial key item no-despawn behavior through config
changed:
  - Updated to the 1.13 Minecraft versions
  - Utilizing the new minecraft command system
  - Now the count argument in commands accepts legend suffixes
  - The subspatial key item is even more weird (floats and doesn't rotate)
fixed:
  - The configs are now properly synced with the new Forge config system

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,8 +30,8 @@ jobs:
         id: tag-check
         run: git describe --exact-match HEAD && echo '::set-output name=TAGGED::1' || true
 
-      - name: Make a release build and push it to curse and github
-        run: ./gradlew publish
+      - name: Make a release build and push it to curse, github and maven
+        run: ./gradlew publish githubRelease curseforge
         if: steps.tag-check.outputs.TAGGED
 
       - name: Make a git build and push it to curse
