--- a/src/main/resources/accesstransformer.cfg
+++ b/src/main/resources/accesstransformer.cfg
@@ -6,4 +6,13 @@ public net.minecraft.client.renderer.GlStateManager$BlendState
 public net.minecraft.client.renderer.GlStateManager$BooleanState
 public net.minecraft.client.renderer.GlStateManager$BooleanState field_179201_b # currentState
 
+public net.minecraft.entity.Entity field_70178_ae # isImmuneToFire
 public net.minecraft.entity.item.EntityItem field_70292_b # age
+public net.minecraft.entity.item.EntityItem field_145804_b # pickupDelay
+
+# forge got so bad in 1.13
+public net.minecraft.world.storage.loot.LootTableManager field_186526_b # GSON_INSTANCE
+public net.minecraft.world.storage.loot.LootTableManager field_186527_c # registeredLootTables
+
+# lul
+public net.minecraft.client.network.NetworkPlayerInfo field_187107_a # playerTextures
