Update to MC 1.14.4, fix all the mappings and stuff
changed:
  - Updated to work with 1.14 minecraft versions
fixed:
  - Potential random crash at world loading related to configs
  - Proper mod logo (the 1.13 one was not displayed by Forge anyway)

--- a/src/main/resources/mods.toml
+++ b/src/main/resources/mods.toml
@@ -10,7 +10,7 @@ displayName='subpocket'
 updateJSONURL='https://raw.githubusercontent.com/wiki/necauqua/subpocket/updates.json'
 displayURL='https://www.curseforge.com/minecraft/mc-mods/subpocket'
 logoFile='logo.png'
-credits='People from my discord who keep me entertained and remind to have a level of productivity that is not zero'
+credits='People from my discord who keep me entertained and remind me to have an above-zero level of productivity'
 authors='necauqua'
 description='''
 This mod adds almost for free some INFININE (omg) storage to the game.
