--- a/src/main/resources/accesstransformer.cfg
+++ b/src/main/resources/accesstransformer.cfg
@@ -1,18 +1,17 @@
 
 ### SUPER sneaky and ugly way for MC not to enable blending when drawing items, used for pixel-picking:
 
-public net.minecraft.client.renderer.GlStateManager field_179157_e # blendState
-public net.minecraft.client.renderer.GlStateManager$BlendState
-public net.minecraft.client.renderer.GlStateManager$BooleanState
-public net.minecraft.client.renderer.GlStateManager$BooleanState field_179201_b # currentState
+public com.mojang.blaze3d.platform.GlStateManager BLEND
+public com.mojang.blaze3d.platform.GlStateManager$BlendState
+public com.mojang.blaze3d.platform.GlStateManager$BooleanState
+public com.mojang.blaze3d.platform.GlStateManager$BooleanState field_179201_b
 
-public net.minecraft.entity.Entity field_70178_ae # isImmuneToFire
-public net.minecraft.entity.item.EntityItem field_70292_b # age
-public net.minecraft.entity.item.EntityItem field_145804_b # pickupDelay
+public net.minecraft.entity.item.ItemEntity field_70292_b # age
+public net.minecraft.entity.item.ItemEntity field_145804_b # pickupDelay
 
 # forge got so bad in 1.13
 public net.minecraft.world.storage.loot.LootTableManager field_186526_b # GSON_INSTANCE
 public net.minecraft.world.storage.loot.LootTableManager field_186527_c # registeredLootTables
 
 # lul
-public net.minecraft.client.network.NetworkPlayerInfo field_187107_a # playerTextures
+public net.minecraft.client.network.play.NetworkPlayerInfo field_187107_a # playerTextures
