Easiest update to newer minecraft in history, plus some other stuff
changed:
  - Updated to Minecraft 1.15.2
  - The subspatial key now also does not trigger block left click event - meaning it can break things like the dragon egg

--- a/src/main/resources/accesstransformer.cfg
+++ b/src/main/resources/accesstransformer.cfg
@@ -1,7 +1,7 @@
 
 ### SUPER sneaky and ugly way for MC not to enable blending when drawing items, used for pixel-picking:
 
-public com.mojang.blaze3d.platform.GlStateManager BLEND
+public com.mojang.blaze3d.platform.GlStateManager field_225661_f_ # BLEND
 public com.mojang.blaze3d.platform.GlStateManager$BlendState
 public com.mojang.blaze3d.platform.GlStateManager$BooleanState
 public com.mojang.blaze3d.platform.GlStateManager$BooleanState field_179201_b
@@ -9,9 +9,7 @@ public com.mojang.blaze3d.platform.GlStateManager$BooleanState field_179201_b
 public net.minecraft.entity.item.ItemEntity field_70292_b # age
 public net.minecraft.entity.item.ItemEntity field_145804_b # pickupDelay
 
-# forge got so bad in 1.13
-public net.minecraft.world.storage.loot.LootTableManager field_186526_b # GSON_INSTANCE
-public net.minecraft.world.storage.loot.LootTableManager field_186527_c # registeredLootTables
-
 # lul
 public net.minecraft.client.network.play.NetworkPlayerInfo field_187107_a # playerTextures
+public net.minecraft.client.gui.IngameGui field_191743_I # chatListeners
+public net.minecraft.util.text.TranslationTextComponent field_150275_g # lastTranslationUpdateTimeInMilliseconds
