Update to 1.16 (yay)
changed:
  - Updated the mod to Minecraft 1.16.4
fixed:
  - Harmless config-related crash when the server finishes shutting down

--- a/src/main/resources/accesstransformer.cfg
+++ b/src/main/resources/accesstransformer.cfg
@@ -15,4 +15,4 @@ public net.minecraft.entity.item.ItemEntity field_145804_b # pickupDelay
 # lul
 public net.minecraft.client.network.play.NetworkPlayerInfo field_187107_a # playerTextures
 public net.minecraft.client.gui.IngameGui field_191743_I # chatListeners
-public net.minecraft.util.text.TranslationTextComponent field_150275_g # lastTranslationUpdateTimeInMilliseconds
+public net.minecraft.util.text.TranslationTextComponent field_240756_i_
