Fix transparent items picking and picking wrong items when there are more than 32 item types bug introduced in 1.15 update
fixed:
  - Picking transparent items (like stained glass)
  - Picking items that have tile entity rendering (chests and such)
  - Picking just breaking when there is more than 32 item types (1.15 rendering regression)

--- a/src/main/resources/accesstransformer.cfg
+++ b/src/main/resources/accesstransformer.cfg
@@ -1,11 +1,14 @@
 
-### SUPER sneaky and ugly way for MC not to enable blending when drawing items, used for pixel-picking:
+# needed for advanced item rendering stuff
+public net.minecraft.client.renderer.ItemRenderer field_175057_n # textureManager
+public net.minecraft.client.renderer.ItemRenderer func_229114_a_(Lnet/minecraft/client/renderer/model/IBakedModel;Lnet/minecraft/item/ItemStack;IILcom/mojang/blaze3d/matrix/MatrixStack;Lcom/mojang/blaze3d/vertex/IVertexBuilder;)V # renderModel
 
-public com.mojang.blaze3d.platform.GlStateManager field_225661_f_ # BLEND
-public com.mojang.blaze3d.platform.GlStateManager$BlendState
-public com.mojang.blaze3d.platform.GlStateManager$BooleanState
-public com.mojang.blaze3d.platform.GlStateManager$BooleanState field_179201_b
+public net.minecraft.client.renderer.RenderType$Type
+public net.minecraft.client.renderer.RenderType$Type field_228668_S_ # renderState
+public net.minecraft.client.renderer.RenderType$State field_228677_a_ # texture
+public net.minecraft.client.renderer.RenderState$TextureState field_228602_Q_ # texture
 
+# some extra weirdness for subspatial key item
 public net.minecraft.entity.item.ItemEntity field_70292_b # age
 public net.minecraft.entity.item.ItemEntity field_145804_b # pickupDelay
 
