A bunch of various fixes and refactors before 1.17, bump Forge, Gradle and ForgeGradle
changed:
  - The default value of subspatial_key_no_despawn now defaults to false (always should've been)
fixed:
  - The subpocket command was registered incorrectly and might have been disappearing after resource reload because of that, fixed
  - Added correct mod metadata for the Forge and Minecraft dependencies

--- a/src/main/resources/accesstransformer.cfg
+++ b/src/main/resources/accesstransformer.cfg
@@ -1,6 +1,5 @@
 
 # needed for advanced item rendering stuff
-public net.minecraft.client.renderer.ItemRenderer field_175057_n # textureManager
 public net.minecraft.client.renderer.ItemRenderer func_229114_a_(Lnet/minecraft/client/renderer/model/IBakedModel;Lnet/minecraft/item/ItemStack;IILcom/mojang/blaze3d/matrix/MatrixStack;Lcom/mojang/blaze3d/vertex/IVertexBuilder;)V # renderModel
 
 public net.minecraft.client.renderer.RenderType$Type
@@ -12,7 +11,7 @@ public net.minecraft.client.renderer.RenderState$TextureState field_228602_Q_ # 
 public net.minecraft.entity.item.ItemEntity field_70292_b # age
 public net.minecraft.entity.item.ItemEntity field_145804_b # pickupDelay
 
-# lul
-public net.minecraft.client.network.play.NetworkPlayerInfo field_187107_a # playerTextures
-public net.minecraft.client.gui.IngameGui field_191743_I # chatListeners
-public net.minecraft.util.text.TranslationTextComponent field_240756_i_
+# eggs
+public-f net.minecraft.client.resources.SkinManager field_152797_e # sessionService
+public-f net.minecraft.client.gui.ChatLine field_74541_b # lineString
+public net.minecraft.client.gui.NewChatGui field_146253_i # drawnChatLines
