--- a/src/main/resources/mods.toml
+++ b/src/main/resources/mods.toml
@@ -1,20 +1,36 @@
 
-modLoader='javafml'
-loaderVersion='[25,)'
-license='MIT'
+modLoader = 'javafml'
+loaderVersion = '[36,)'
+license = 'MIT'
 issueTrackerURL='https://github.com/necauqua/subpocket/issues'
 
 [[mods]]
 modId='subpocket'
 version='${file.jarVersion}'
 displayName='subpocket'
-updateJSONURL='https://raw.githubusercontent.com/wiki/necauqua/subpocket/updates.json'
-displayURL='https://www.curseforge.com/minecraft/mc-mods/subpocket'
-logoFile='logo.png'
-credits='People from my discord who keep me entertained and remind me to have an above-zero level of productivity'
-authors='necauqua'
-description='''
+updateJSONURL = 'https://raw.githubusercontent.com/wiki/necauqua/subpocket/updates.json'
+displayURL = 'https://www.curseforge.com/minecraft/mc-mods/subpocket'
+logoFile = 'logo.png'
+credits = '''
+People from my discord who keep me entertained and remind me to have an above-zero level of productivity
+
+__Minecraftian__ - for the cool subpocket key texture
+'''
+authors = 'necauqua'
+description = '''
 This mod adds almost for free some INFININE (omg) storage to the game.
 
 Butt beware..
 '''
+[[dependencies.subpocket]]
+modId = 'forge'
+mandatory = true
+versionRange = '[36,)'
+ordering = 'NONE'
+side = 'BOTH'
+[[dependencies.subpocket]]
+modId = 'minecraft'
+mandatory = true
+versionRange = '[1.16,1.17)'
+ordering = 'NONE'
+side = 'BOTH'
