The (huge) 1.17 update
added:
  - A few display options in the client config
  - A little menu that shows when holding Tab to change most of above display options in-game
changed:
  - The mod was updated to 1.17 versions of Minecraft
  - `disable_pixel_picking` config was changed, see the 'added' section
  - The pixel picking was rewritten to shaders, nothing should change but this works better
  - The API was revisited a little - if anyone ever used it this would break your code!
fixed:
  - If an item gets added while being dragged (by a command or something) the drag is no longer bugged.
  - Due to a lot of rewrites and code improvements, some other potential minor issues might've been fixed

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         maven { url = 'https://maven.necauqua.dev/' }
     }
     dependencies {
-        classpath 'dev.necauqua:necauqua-mod:0.7.0'
+        classpath 'dev.necauqua:necauqua-mod:0.7.1'
     }
 }
 
@@ -13,7 +13,8 @@ sourceSets { api }
 
 nmod {
     curseID = '275425'
-    version = '1.16-6.0.0.3'
-    forge = '1.16.5-36.2.0'
-    mappings = [channel: 'snapshot', version: '20210309-1.16.5']
+    version = '1.17-7.0.0.0'
+    forge = '1.17.1-37.0.71'
+    mappings = '1.17.1'
+    javaVersion = 16
 }
