--- a/src/main/resources/accesstransformer.cfg
+++ b/src/main/resources/accesstransformer.cfg
@@ -1,17 +1,20 @@
 
-# needed for advanced item rendering stuff
-public net.minecraft.client.renderer.ItemRenderer func_229114_a_(Lnet/minecraft/client/renderer/model/IBakedModel;Lnet/minecraft/item/ItemStack;IILcom/mojang/blaze3d/matrix/MatrixStack;Lcom/mojang/blaze3d/vertex/IVertexBuilder;)V # renderModel
+# small font
+public net.minecraft.client.gui.Font f_92713_ # fonts
 
-public net.minecraft.client.renderer.RenderType$Type
-public net.minecraft.client.renderer.RenderType$Type field_228668_S_ # renderState
-public net.minecraft.client.renderer.RenderType$State field_228677_a_ # texture
-public net.minecraft.client.renderer.RenderState$TextureState field_228602_Q_ # texture
+# pixel picking
+public net.minecraft.client.renderer.RenderType$CompositeRenderType
+public net.minecraft.client.renderer.RenderType$CompositeRenderType f_110511_ # state
+public net.minecraft.client.renderer.RenderType$CompositeState f_110576_ # textureState
 
 # some extra weirdness for subspatial key item
-public net.minecraft.entity.item.ItemEntity field_70292_b # age
-public net.minecraft.entity.item.ItemEntity field_145804_b # pickupDelay
+public net.minecraft.world.entity.item.ItemEntity f_31985_ # age
+public net.minecraft.world.entity.item.ItemEntity f_31986_ # pickupDelay
+
+# just subpocket container, welp
+protected net.minecraft.world.inventory.AbstractContainerMenu m_150430_(IILnet/minecraft/world/inventory/ClickType;Lnet/minecraft/world/entity/player/Player;)V # doClick
 
 # eggs
-public-f net.minecraft.client.resources.SkinManager field_152797_e # sessionService
-public-f net.minecraft.client.gui.ChatLine field_74541_b # lineString
-public net.minecraft.client.gui.NewChatGui field_146253_i # drawnChatLines
+public-f net.minecraft.client.resources.SkinManager f_118809_ # sessionService
+public-f net.minecraft.client.GuiMessage f_90787_ # message
+public net.minecraft.client.gui.components.ChatComponent f_93761_ # trimmedMessages
