Drop fix for 1.18.1, rewrite transformer to mixins, add creative breaking
added:
  - Now subspatial key breaks blocks at the same speed even in creative! :D
changed:
  - Rewrote cringe JS transformer to mixins which are more stable at this point
fixed:
  - Items dropping when broken by the key on 1.18.1

--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,9 @@ sourceSets { api }
 
 nmod {
     curseID = '275425'
-    version = '1.18-8.0.0.0'
-    forge = '1.18-38.0.1'
-    mappings = '1.18'
+    version = '1.18-8.0.1.0'
+    forge = '1.18.1-39.0.5'
+    mappings = '1.18.1'
     javaVersion = 17
+    mixin = '0.8.5'
 }
