--- a/.github/workflows/push-to-main.yml
+++ b/.github/workflows/push-to-main.yml
@@ -7,7 +7,7 @@ on:
       - 'src/**'
 jobs:
   release:
-    name: Release
+    name: Build and release if tagged
     runs-on: ubuntu-latest
 
     steps:
@@ -15,6 +15,18 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
+      - name: Setup the JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: 17
+
+      - name: Cache Gradle
+        uses: actions/cache@v1
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+          restore-keys: ${{ runner.os }}-gradle
 
       - name: Setup the secrets
         shell: bash
@@ -29,38 +41,42 @@ jobs:
       - name: Build
         run: ./gradlew build
 
-      - name: Get version if tagged
-        id: get-version
+      - name: Get git info
+        id: git-info
         run: |
+          echo "::set-output name=SHA_SHORT::$(git rev-parse --short HEAD)"
           TAG=$(git describe --exact-match HEAD 2> /dev/null || true)
           if [ -n "$TAG" ]; then
             echo ::set-output name=VERSION::${TAG#v}
           fi
 
-      - name: Push a git build to CurseForge
-        if: "!steps.get-version.outputs.VERSION"
-        run: ./gradlew curseforge
+      - name: Upload build artifacts
+        if: ${{ runner.os == 'Linux' }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ github.event.repository.name }}-build-${{ steps.git-info.outputs.SHA_SHORT }}
+          path: build/libs/
 
       - name: Get the last changelog
-        if: steps.get-version.outputs.VERSION
+        if: steps.git-info.outputs.VERSION
         run: ./gradlew -q getLastChangelog > last-changelog.md
 
       - name: Make a GitHub Release
-        if: steps.get-version.outputs.VERSION
+        if: steps.git-info.outputs.VERSION
         uses: ncipollo/release-action@v1
         with:
-          tag: v${{ steps.get-version.outputs.VERSION }}
-          artifacts: build/libs/subpocket-${{ steps.get-version.outputs.VERSION }}.jar
+          tag: v${{ steps.git-info.outputs.VERSION }}
+          artifacts: build/libs/${{ github.event.repository.name }}-${{ steps.git-info.outputs.VERSION }}.jar
           bodyFile: last-changelog.md
           removeArtifacts: true
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push the build to Maven (GitHub and personal)
-        if: steps.get-version.outputs.VERSION
+        if: steps.git-info.outputs.VERSION
         run: ./gradlew publish
 
       - name: Push the build to CurseForge
-        if: steps.get-version.outputs.VERSION
+        if: steps.git-info.outputs.VERSION
         run: ./gradlew curseforge
 
   update-changelogs:
@@ -72,6 +88,13 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
+      - name: Cache Gradle
+        uses: actions/cache@v1
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+          restore-keys: ${{ runner.os }}-gradle
 
       - name: Checkout the wiki
         uses: actions/checkout@v2
