Fix changelog job failing

--- a/.github/workflows/push-to-main.yml
+++ b/.github/workflows/push-to-main.yml
@@ -89,6 +89,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup the JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: 17
+
       - name: Cache Gradle
         uses: actions/cache@v1
         with:
