--- a/src/main/resources/accesstransformer.cfg
+++ b/src/main/resources/accesstransformer.cfg
@@ -16,5 +16,4 @@ protected net.minecraft.world.inventory.AbstractContainerMenu m_150430_(IILnet/m
 
 # eggs
 public-f net.minecraft.client.resources.SkinManager f_118809_ # sessionService
-public-f net.minecraft.client.GuiMessage f_90787_ # message
-public net.minecraft.client.gui.components.ChatComponent f_93761_ # trimmedMessages
+protected net.minecraft.network.chat.MutableComponent <init>(Lnet/minecraft/network/chat/ComponentContents;Ljava/util/List;Lnet/minecraft/network/chat/Style;)V
