Use a new shared workflow and new necauqua-mod, publish to Modrinth

--- a/.github/workflows/push-to-main.yml
+++ b/.github/workflows/push-to-main.yml
@@ -5,123 +5,10 @@ on:
       - main
     paths:
       - 'src/**'
+      - 'build.gradle'
 jobs:
-  release:
-    name: Build and release if tagged
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout the repo
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Setup the JDK
-        uses: actions/setup-java@v3
-        with:
-          distribution: zulu
-          java-version: 17
-
-      - name: Cache Gradle
-        uses: actions/cache@v3
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-          restore-keys: ${{ runner.os }}-gradle
-
-      - name: Setup the secrets
-        shell: bash
-        env:
-          KEYSTORE: ${{ secrets.KEYSTORE }}
-          GRADLE_PROPERTIES: ${{ secrets.GRADLE_PROPERTIES }}
-        run: |
-          mkdir -p $HOME/.gradle
-          echo "$KEYSTORE" | base64 -d > $HOME/.gradle/keystore.jks
-          echo "$GRADLE_PROPERTIES" | base64 -d | sed "s:\$HOME:$HOME:g" > $HOME/.gradle/gradle.properties
-
-      - name: Build
-        run: ./gradlew build
-
-      - name: Get git info
-        id: git-info
-        run: |
-          echo SHA_SHORT=$(git rev-parse --short HEAD) >> $GITHUB_OUTPUT
-          TAG=$(git describe --exact-match HEAD 2> /dev/null || true)
-          if [ -n "$TAG" ]; then
-            echo VERSION=${TAG#v} >> $GITHUB_OUTPUT
-          fi
-
-      - name: Upload build artifacts
-        if: ${{ runner.os == 'Linux' }}
-        uses: actions/upload-artifact@v3
-        with:
-          name: ${{ github.event.repository.name }}-build-${{ steps.git-info.outputs.SHA_SHORT }}
-          path: build/libs/
-
-      - name: Get the last changelog
-        if: steps.git-info.outputs.VERSION
-        run: ./gradlew -q getLastChangelog > last-changelog.md
-
-      - name: Make a GitHub Release
-        if: steps.git-info.outputs.VERSION
-        uses: ncipollo/release-action@v1
-        with:
-          tag: v${{ steps.git-info.outputs.VERSION }}
-          artifacts: build/libs/${{ github.event.repository.name }}-${{ steps.git-info.outputs.VERSION }}.jar
-          bodyFile: last-changelog.md
-          removeArtifacts: true
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Push the build to Maven (GitHub and personal)
-        if: steps.git-info.outputs.VERSION
-        run: ./gradlew publish
-
-      - name: Push the build to CurseForge
-        if: steps.git-info.outputs.VERSION
-        run: ./gradlew curseforge
-
-  update-changelogs:
-    name: Update changelogs
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout the main repo
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Setup the JDK
-        uses: actions/setup-java@v3
-        with:
-          distribution: zulu
-          java-version: 17
-
-      - name: Cache Gradle
-        uses: actions/cache@v3
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-          restore-keys: ${{ runner.os }}-gradle
-
-      - name: Checkout the wiki
-        uses: actions/checkout@v3
-        with:
-          repository: ${{github.repository}}.wiki
-          path: wiki
-
-      - name: Generate a human changelog
-        shell: bash
-        run: ./gradlew -q generateChangelog --template .github/workflows/changelog-template.md > wiki/Changelog.md
-
-      - name: Generate Forge updates.json
-        shell: bash
-        run: ./gradlew -q generateForgeUpdates --template .github/workflows/updates-template.json > wiki/updates.json
-
-      - name: Push to wiki
-        run: |
-          cd wiki
-          git config --local user.email action@github.com
-          git config --local user.name 'Changelog Updater'
-          git add .
-          git diff --quiet && git diff --staged --quiet || git commit -m 'Update changelog'
-          git push
+  mcmod-workflow:
+    uses: necauqua/mcmod-workflow/.github/workflows/push-to-main.yml@main
+    secrets:
+      KEYSTORE: ${{ secrets.KEYSTORE }}
+      GRADLE_PROPERTIES: ${{ secrets.GRADLE_PROPERTIES }}
