--- a/src/main/resources/mods.toml
+++ b/src/main/resources/mods.toml
@@ -8,7 +8,7 @@ modId = 'subpocket'
 version = '${file.jarVersion}'
 displayName = 'subpocket'
 updateJSONURL = 'https://raw.githubusercontent.com/wiki/necauqua/subpocket/updates.json'
-displayURL = 'https://www.curseforge.com/minecraft/mc-mods/subpocket'
+displayURL = 'https://modrinth.com/mod/subpocket'
 logoFile = 'logo.png'
 credits = '''
 People from my discord who keep me entertained and remind me to have an above-zero level of productivity
