--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,9 @@ sourceSets { api }
 nmod {
     curseID = '275425'
     modrinthID = 'hVTSaz1j'
-    mcversion = '1.19.*'
-    forge = '1.19.3-44.1.0'
-    mappings = '1.19.3'
+    mcversions = ['1.19', '1.19.1', '1.19.2']
+    forge = '1.19.2-43.2.0'
+    mappings = '1.19.2'
     javaVersion = 17
     mixin = '0.8.5'
 }
