--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ sourceSets { api }
 nmod {
     curseID = '275425'
     modrinthID = 'hVTSaz1j'
-    mcversion = '1.19.*'
+    mcversions = ['1.19.3', '1.19.4']
     forge = '1.19.3-44.1.0'
     mappings = '1.19.3'
     javaVersion = 17
